apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'CryptoDrive.Main'
sourceCompatibility = 1.8
targetCompatibility = 1.8
version = '1.0'

////create a single Jar with all dependencies
//task fatJar(type: Jar) {
//    manifest {
//        attributes 'Implementation-Title': 'Gradle Jar File Example',
//                'Implementation-Version': version,
//                'CryptoDrive-Class': mainClassName
//    }
//    baseName = project.name + '-all'
//    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
//    with jar
//}

jar {
    manifest {
        attributes 'Implementation-Title': 'Gradle Jar',
                'Implementation-Version': version,
                'Main-Class': mainClassName
    }
    baseName = project.name + '-all'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
}

run{
    standardInput = System.in
}

repositories {
    mavenCentral()
}

dependencies {
    compile 'com.google.api-client:google-api-client:1.23.0'
    compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
    compile 'com.google.apis:google-api-services-drive:v3-rev110-1.23.0'

    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
    //compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.60'
    // https://mvnrepository.com/artifact/commons-io/commons-io
    compile group: 'commons-io', name: 'commons-io', version: '2.4'
    // https://mvnrepository.com/artifact/org.awaitility/awaitility
    compile group: 'org.awaitility', name: 'awaitility', version: '3.1.5'
}
